implement /insight/:function_id
