# src/router.js
@@ -57,6 +57,12 @@ router.get('/info', (req, res) => {
  *   get:
  *     operationId: infoInsight
  *     description: Get info about one Insight Function
+ *     parameters:
+ *     - name: function_id
+ *       in: path
+ *       type: string
+ *       required: true
+ *       description: Which insight function to run
  *     responses:
  *       "200":
  *          description: Insight Functions successfully listed
@@ -68,7 +74,13 @@ router.get('/info', (req, res) => {
  *           $ref: '#/definitions/ErrorResponse'
  */
 router.get('/insight/:function_id', (req, res) => {
-    // not implement yet
+    let functionId = req.params.function_id
+    let funcInfo = funcs.getFunctionInfo(functionId)
+    if(funcInfo) {
+        res.json(funcInfo)
+    } else {
+        res.status(404).json({error: "function not found"})
+    }
 })
 
 /**
@@ -138,12 +150,12 @@ router.post('/process', async (req, res) => {
     let groupId = args.group_id
     let fns = funcs.getFunctions(groupId).map(obj => obj.id)
 
-    // console.log('[INFO] process-in', JSON.stringify(body))
+    console.log('[INFO] process-in', JSON.stringify(body))
     // console.log('[INFO] fns', JSON.stringify(fns))
     if(fns.includes(args.function_id)) {
         result = await funcs[args.function_id](body)
     }
-    // console.log('[INFO] process-out', JSON.stringify(result))
+    console.log('[INFO] process-out', JSON.stringify(result))
 
     res.json(result)
 })
